--- a/src/sections/germ/parts/bundle.tex
+++ b/src/sections/germ/parts/bundle.tex
@@ -1,9 +1,9 @@
 % generalize
 \begin{myparagraph}
     We can take this even further by dropping the assumption
-    that the base spaces of the two microbundles equal.
+    that the two microbundles have the same base space.
     Note that in this case no comparison to isomorphy can be drawn,
-    because we haven't defined isomorphy between microbundles over different base spaces.
+    because we have not defined isomorphy between microbundles over different base spaces.
 \end{myparagraph}
 
 % definition
