--- a/src/sections/germ/parts/germ.tex
+++ b/src/sections/germ/parts/germ.tex
@@ -20,5 +20,5 @@
 \begin{mystatement}{definition}[homeomorphism-germ]{homotopy::homeomorphism}[65]
     A \defterm{homeomorphism-germ} $\germdef{F}{(X, A)}{(Y, B)}$ is a map-germ
     such that there exists a representative $f: U_f \to Y$
-    that maps homeomorphically to a neighborhood of $B$.  
+    that maps $U_f$ homeomorphically to a neighborhood of $B$.  
 \end{mystatement}
