--- a/src/sections/germ/parts/isomorphism.tex
+++ b/src/sections/germ/parts/isomorphism.tex
@@ -8,9 +8,9 @@
     \[ \germdef{[\psi]}{(E, i(B))}{(E', i'(B))}. \]
     
     Studying isomorphy between $\bb$ and $\bb'$
-    using map-germs is useful,
-    because we don't care what $\psi$ does on its initial domain,
-    but only what it does on arbitray small neighborhoods of $i(B)$.
+    using map-germs is useful
+    because we do not care what $\psi$ does on its initial domain,
+    but only what it does on arbitrary small neighborhoods of $i(B)$.
     Hence, every representative of $[\psi]$
     describes the `same' isomorphy between $\bb$ and $\bb'$.
     Now, naturally, the question arises whether
@@ -20,7 +20,7 @@
     The answer is generally no, because isomorphy between microbundles
     additionally requires 
     the homeomorphism to commute with the injection and projection maps.
-    Therefore, we need to require an extra condition (`fiber-preservation')
+    Hence, we need an extra condition (`fiber-preservation')
     for this implication to be true.
     This justifies the following definition.
     
