--- a/src/sections/homotopy/parts/lemma2.tex
+++ b/src/sections/homotopy/parts/lemma2.tex
@@ -9,7 +9,7 @@
     Let $b \in B$ be arbitrary.
 
     For every $t \in \I$, assume a neighborhood
-    $U_t := V_t \cross (t - \eps_t, t + \eps_t)$ of $(b, t)$
+    $U_t = V_t \cross (t - \eps_t, t + \eps_t)$ of $(b, t)$
     such that $\bb[U_t]$ is trivial.
     Such a $U_t$ can be constructed by taking
     a local trivialization $(U', V', \phi')$ of $(b, t)$ in $\bb$
