--- a/src/sections/induced/parts/restriction.tex
+++ b/src/sections/induced/parts/restriction.tex
@@ -7,11 +7,12 @@
 
 % remark
 \begin{mystatement}{remark}{induced::total}
-    In the following, we consider $E(\bb[A])$ to be a subset of $E(\bb)$.
+    From now on, we consider $E(\bb[A])$ to be a subset of $E(\bb)$.
     This is justified because there exists an embedding
     \begin{center}
         $\iota: E(\bb[A]) \to E(\bb)$ with $(a, e) \mapsto e$
     \end{center}
-    and inverse $e \mapsto (j(e), e)$.
-    Note that this argument can be made for any induced microbundle over an injective map.
+    together with the inverse $e \mapsto (j(e), e)$.
+    Note that the same reasoning can be applied to
+    induced microbundles over any injective map.
 \end{mystatement}
