--- a/src/sections/induced/section.tex
+++ b/src/sections/induced/section.tex
@@ -8,10 +8,10 @@
 
     % roadmap
     After showing the existence of such a microbundle,
-    we will prove some fundamental properties
+    we prove some basic properties
     such as triviality criteria and compatibility with map composition.
-    At the end of the section,
-    we will address induced microbundles over cones and simplicial complexes.
+    Afterwards, we study induced microbundles
+    over cones and simplicial complexes.
 \end{myparagraph}
 \input{src/sections/induced/parts/definition}
 \input{src/sections/induced/parts/restriction}
