--- a/src/sections/microbundle/parts/isomorphy.tex
+++ b/src/sections/microbundle/parts/isomorphy.tex
@@ -1,6 +1,6 @@
 % foreword
 \begin{myparagraph}
-    Before we look at some examples of microbundles,
+    Before we look at some examples for microbundles,
     we first define what it means for two microbundles to be isomorphic.
 \end{myparagraph}
 
