--- a/src/sections/microbundle/parts/underlying.tex
+++ b/src/sections/microbundle/parts/underlying.tex
@@ -11,7 +11,7 @@
 % proof
 \begin{myproof}[that $\abs{\xi}$ is a microbundle]
     % open
-    First, note that $\pi$ is an open map:
+    First, $\pi$ is an open map:
 
     Let $V \sub E$ be open.
     For every $b \in \pi(V)$, there exists a neighborhood $U_b$
@@ -28,6 +28,6 @@
     Additionally, $\pi \circ i = id_B$ since $\pi(i(b)) = \pi(0_b) = b$. 
 
     % local triviality
-    Local triviality and commutativity with $id \cross 0$ and $\pi_1$
-    are immediatly inherited from the local triviality conditions for vector bundles.
+    Local triviality is immediatly inherited from
+    the local triviality condition for vector bundles.
 \end{myproof}
