--- a/src/sections/microbundle/section.tex
+++ b/src/sections/microbundle/section.tex
@@ -1,11 +1,11 @@
 \begin{myparagraph}
-    This section introduces the concept of microbundles
+    This subsection introduces the concept of microbundles
     along with some basic properties.
     We clarify what a microbundle is, what it means for a microbundle to be trivial and 
     cover some basic examples of microbundles, including the tangent microbundle over topological manifolds.
 
     Throughout this thesis,
-    we require that every topological manifold is paracompact and second-countable.
+    we require that every manifold is paracompact and second-countable.
 \end{myparagraph}
 \input{src/sections/microbundle/parts/definition}
 \input{src/sections/microbundle/parts/local}
