--- a/src/sections/normal/parts/totalspace.tex
+++ b/src/sections/normal/parts/totalspace.tex
@@ -28,9 +28,9 @@
     continuity of both $\psi$ and $\inv{\psi}$.
     
     % commutativity
-    Commutativity between the injection maps is given by
+    Commutativity with the injection maps is given by
     \[ \psi(\Delta(n)) = \psi(n, n) = (n, n, n) = (n, \Delta(n)) = i_\iota(n) \]
-    and between the projection maps by
+    and with the projection maps by
     \[ \pi_1(n_1, n_2) = n_1 = j_\iota(n_1, n_1, n_2) = j_\iota(\psi(n_1, n_2)), \]
     which concludes the proof.
     
