--- a/src/sections/rooted/parts/wedge.tex
+++ b/src/sections/rooted/parts/wedge.tex
@@ -87,7 +87,7 @@
             $W_a' \sub E(\ba)$ such that $W_a = W_a' \cap E(\bab)$.
 
             Let $U_a' \sub A$ be an open neighborhood of $a_0$ and $\eps > 0$ such that
-            \[ V_a' := U_a' \cross \ball[\eps] \sub \phi_a(W_a'). \]
+            \[ V_a' = U_a' \cross \ball[\eps] \sub \phi_a(W_a'). \]
             This allows us to define the map
             \[ \phi_a': V_a' \isomto \phi_a'(V_a') \sub A \cross \R^n \twith \]
             \[ \phi_a'(e) = (j_a(e), (\snd{\phi_b} \circ f \circ \inv{\phi_a})(a_0, \snd{\phi_a}(e))). \]
@@ -103,7 +103,7 @@
             that both $\phi_a'$ and $\phi_b$ are homeomorphisms,
             and that $\phi_a'(e_a) = \phi(e_b) \implies f(e_a) = e_b$. 
 
-            Commutativity between $i_a \cup i_b$ and $id \cross 0$
+            Commutativity with $i_a \cup i_b$ and $id \cross 0$
             as well as between $j_a \cup j_b$ and $\pi_1$
             is inherited from $\phi_a$ and $\phi_b$.
             Note that $\phi_a(i_a(a)) = (a, 0) = \phi_a'(i_a(a))$.
