--- a/src/sections/suspension/parts/paracompact.tex
+++ b/src/sections/suspension/parts/paracompact.tex
@@ -23,7 +23,7 @@
     By rescaling and capping to $1$ if necessary,
     we may assume that $\lambda(b_0) = 1$.
 
-    We choose $W := \supp{\lambda} \sub U$,
+    We choose $W = \supp{\lambda} \sub U$,
     which is closed by the definition of the support.
     We are now able to define an isomorphism-germ $\germ{\bb[W]}{\be{W}}$ represented by
     \[ f: V \isomto f(V) \sub U \cross \R^n \twith f(e) = (j(e), \snd{r}(\inv{\phi}(b_0, \snd{\phi}(e)))), \]
