--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -3,107 +3,99 @@
     % smooth :: tangent space
     Given a smooth manifold $M$,
     one can define the tangent space
-    in a point $p \in M$ using `derivations'
-    \[
-        T_p M = \set{\nu: C^\infty(M) \to \R^n \text{ linear}}{\nu(fg)
-        = f(p)\nu(g) + \nu(f)g(p)}
-    \]
-    or using `tangent curves'
-    \[ T_p M = \set{\gamma \in C^\infty((-1, 1), M)}{\gamma(0) = p } / \sim \]
-    where $\gamma \sim \gamma' \iff \frac{d}{dx}(\psi \circ \gamma)(0) = \frac{d}{dx}(\psi \circ \gamma')(0)$
-    and $\psi$ is a chart for $p$.
-    % ? omit
+    in a point $p \in M$ over `derivations' in $\mathcal{L}(C^\infty(M), \R^n)$
+    or over `tangent curves' in $C^\infty((-1, 1), M)$.
 
     % smooth :: tangent bundle
     The tangent space allows for the definition of the tangent bundle
-    \[ TM := \bigsqcup_{p \in M} T_p M\]
+    \[ TM = \bigsqcup_{p \in M} T_p M\]
     together with the projection
     \[ TM \xto{\pi} M, \pi(p, \nu) = p. \]
 
     % topological
     Suppose we want to define the tangent bundle over a topological manifold $M$.
     % topological :: problem
-    As we see from the two definitions of the tangent space,
-    the tangent bundle requires the notion of differentiability.
+    As we can see from the two ways of defining the tangent space,
+    the classic tangent bundle requires the notion of differentiability.
+    One intuitive approach would be to equip the topological manifold
+    with a differentiable structure and use the same construction as for smooth manifolds.
     However, M. Kervaire showed in 1960 that there exists a $10$-dimensional manifold
-    that does not admit a differentiable structure (see\cite{kervaire}).
-    Furthermore, even if there exists such a structure for a topological manifold,
-    it is generally not unique (e.g. the $7$-sphere\cite{milnor7sphere}).
-    % TODO: elaborate
+    that does not admit a differentiable structure \cite{kervaire}.
+    Furthermore, even if there existed a differentiable structure for our topological manifold,
+    it is generally not unique. The $7$-sphere for example admits
+    multiple different differentiable structures (see \cite{milnor7sphere}).
 
-    Therefore,
-    we need a different construction than the one for the smooth case.
+    Hence,
+    we need to take a different approach than the one for the smooth case.
     
     % topological :: naive
-    One plausible approach would be to define the fibers of the tangent bundle
+    Another plausible approach would be to define the fibers of the tangent bundle
     to be of the form $\coll{p} \cross U_p$,
     where $U_p$ is a neighborhood of $p$ which is
     homeomorphic to $\R^d$ via a chart.
     However, this construction raises the problem
-    on choosing neighborhoods $U_p$
+    of choosing neighborhoods $U_p$
     such that they vary continuously over $M$.
     Furthermore,
-    it is questionable whether this construction is topologically
+    it is questionable whether this construction is even a topological
     invariant if it depends on specific choices of neighborhoods $U_p$.
 
     % topological :: solution
     In 1964, John Milnor published `Microbundles, Part I',
     introducing a unique way to think
-    about tangent bundles over topological manifolds:
+    about tangent bundles over topological manifolds.
 
     The core idea behind this approach is
     to drop the assumption
     that the tangent bundle is a vector bundle and hence
-    every fiber must be homeomorphic to euclidean spaces.
-    Instead, we require that the fibers are a `germ' of euclidean space,
-    i.e. a topological space with an open subset homeomorphic to euclidean space.
-    % TODO: rephrase to make clearer that fibers don't have to be static
-    In contrast to the above approach,
+    every fiber must be homeomorphic to euclidean space.
+    Instead, we require that the fibers are `germs' of euclidean space,
+    i.e. topological spaces with an open subset homeomorphic to euclidean space.
+    In contrast to the previous approach,
     we can now choose the neighborhoods $U_p$ of $p$ regardless of any corresponding charts.
-    That is because we can always find
-    the domain of a chart (which is homeomorphic to $\R^d$) within arbitrary neighborhoods of $p$.
+    That is because we do not require anymore that these neighborhoods are euclidean spaces.
+    Moreover, each neighborhood of $p$ contains
+    the domain of a chart, hence satisfying our `germ' condition.
 
     If the respective neighborhoods can be chosen freely,
     we may as well always choose the entire space $M$ for the sake of simplicity.
 
-    So it follows that our resulting total space is of the form $M \cross M$, which,
-    analoguous to the smooth case, comes equipped with the projection
+    We conclude that our resulting total space is of the form $M \cross M$, which,
+    analoguous to the smooth case, comes equipped with a projection
     \[ M \cross M \xto{\pi} M, \pi(m, m') = m. \]
     
     % topological :: microbundle
     In order to develop this approach, Milnor introduces a new type of bundle
-    that arise from this.
+    that generalizes this idea.
     He calls them `microbundles'.
     Many fundamental properties
-    and constructions of vector bundles immediatly carry over other to microbundles,
+    and constructions of vector bundles carry over other to microbundles,
     e.g. induced microbundles or the Whitney sum (see \myintref{chapter::constructions}).
     Moreover, Milnor shows that if a manifold can be equipped with a smooth structure,
-    then the tangent vector bundle regarded as microbundle is isomorphic to the
+    then the tangent vector bundle regarded as a microbundle is isomorphic to the
     tangent microbundle.
 
     % topological :: normal bundle
-    Furthermore, Milnor defines what the microbundle analogue
-    of the normal bundle is.
-    Given a smooth embedded submanifold $P \sub M$,
-    there always exists a normal bundle $NP$ defined fiber-wise with
+    The theory of microbundles over topological manifolds reaches even further,
+    allowing for the definition of a microbundle analogue
+    to the normal bundle.
+    Given a smooth submanifold $P \sub M$,
+    there always exists a normal bundle $NP$ defined fiber-wise by
     \[ N_p P = T_p M / T_p N. \]
-    However, for the topological case it is not as easy.
-    The two mathematicians C. Rourke and B. Sanderson could construct a $19$-dimensional manifold
-    embedded in $S^{29}$ that does not admit a normal microbundles (see\cite{rourke}).
+    In contrast to this, the two mathematicians C. Rourke and B. Sanderson could construct a $19$-dimensional manifold
+    embedded in $S^{29}$ that does not admit a normal microbundle \cite{rourke}.
+    So the existence of a normal microbundle of a submanifold $N \sub M$ is not garantueed.
     Instead, Milnor could show that there always exists a normal microbundle
-    of an embedded manifold
-    in a stabilized surrounding manifold $M \times \R^q$ for some $q \in \N$.
+    of $N$ in a stabilization $M \cross \R^q$ for some $q \in \N$.
 
     % applications
-    Milnors studies on microbundles allowed R. Williamson
-    to transfer fundamental results of cobordism theory from the smooth case
-    over to the topological case, particulary by utilising the existence
-    of a normal microbundle in a stabilized surrounding manifold.
-    % TODO: cite williamson
+    Milnors studies on microbundles allowed Robert Williamson
+    to transfer results in cobordism theory developed by Réne Thom,
+    particulary the concept of transverse regularity, from the smooth category
+    over to the piecewise category (see \cite{williamson}).
 
     % thesis structure
-    This thesis introduces the concept of microbundles and presents
-    a proof for the above theorem.
-    It is based on Milnors paper `Microbundles, Part I',
-    adopting much of its structure and proofs.
+    This thesis presents the concept of microbundles as introduced in 1964 by John Milnor,
+    providing a proof for the above theorem.
+    It is based on Milnors paper `Microbundles, Part I'.
 \end{myparagraph}
