--- a/src/sections/induced/parts/composition.tex
+++ b/src/sections/induced/parts/composition.tex
@@ -1,42 +1,32 @@
 % foreword
 \begin{myparagraph}
-    One would intuitively argue that the induced microbundle is compatible
-    with the composition of maps, i.e.
-    $\ind{(g \circ f)}\bc \cong \ind{f}(\ind{g}\bc)$.
-    This in fact true, as the following lemma shows.
+    The following lemma shows that induced microbundles are compatible
+    with map composition.
 \end{myparagraph}
 
 % lemma
 \begin{mystatement}{lemma}{induced::composition}
     Let $\bundledef{\bc}{C}{E}{i}{j}$ be a microbundle and let $A \xto{f} B \xto{g} C$ be a map diagram.
     Then the two microbundles
-    \[ \bundledef{\ind{(g \circ f)}\bc}{A}{E_1}{i_1}{j_1} \]
-    and
-    \[ \bundledef{\ind{f}(\ind{g}\bc)}{A}{E_2}{i_2}{j_2} \]
+    \[ \bundledef{\ind{(g \circ f)}\bc}{A}{E_1}{i_1}{j_1} \tand \bundledef{\ind{f}(\ind{g}\bc)}{A}{E_2}{i_2}{j_2} \]
     are isomorphic.
 \end{mystatement}
 
 % proof
 \begin{myproof}
-    % foreword
-    Again, we need to find a homeomorphism between a neighborhood of $i_1(A)$ and a neighborhood of $i_2(A)$
-    that commutes with the injection and projection maps.
-    
     % homoemorphism
-    Firstly, we compare the two total spaces:
+    First, compare the two total spaces:
     \begin{itemize}
         \item $E(\ind{(g \circ f)}) = \{ (a, e) \in A \cross E \mid g(f(a)) = j(e)\}$ 
         \item $E(\ind{f}(\ind{g}\bc)) = \{ (a, b, e) \in A \cross (B \cross E) \mid f(a) = b$ and $ g(b) = j(e) \}$
     \end{itemize}
     We define a homeomorphism $\psi: E(\ind{(g \circ f)}) \isomto E(\ind{f}(\ind{g}\bc))$ with
     \[ \psi(a, e) = (a, f(a), e) \tand \inv{\psi}(a, b, e) = (a, e) \]
-    for which homeomorphy follows from component-wise
-    continuity of both $\psi$ and $\inv{\psi}$.
-
+    which is a homeomorphism since both $\psi$ and $\inv{\psi}$ are component-wise continuous.
     % commutativity
-    Commutativity between the injection maps is given by
+    Commutativity with the injection maps is given by
     \[ \psi(i_1(a)) = \psi(a, i(g(f(a)))) = (a, f(a), i(g(f(a)))) = i_2(a) \]
-    and between the projection maps by
-    \[ j_1(a, e) = a = j_2(a, f(a), e) = j_2(\psi(a, e)) \]
+    and with the projection maps by
+    \[ j_1(a, e) = a = j_2(a, f(a), e) = j_2(\psi(a, e)), \]
     which concludes the proof.
 \end{myproof}
