--- a/src/sections/induced/parts/const.tex
+++ b/src/sections/induced/parts/const.tex
@@ -1,8 +1,8 @@
 % lemma
 \begin{mystatement}{lemma}{induced::const}
     Let $\bb$ be a microbundle over $B$.
-    The induced microbundle $\ind{c_{A, b_0}}\bb$ over a constant map
-    \[ c_{A, b_0}: A \to B \twith c_{A, b_0}(a) = b_0 \]
+    The induced microbundle $\ind{c_{A, b_0}}\bb$ over the constant map
+    $c_{A, b_0}: A \to B$ with $c_{A, b_0}(a) = b_0$
     is trivial.
 \end{mystatement}
 
@@ -14,25 +14,25 @@
 
     Let $(U, V, \phi)$ be a local trivialization for $b_0$ in $\bb$.
     Restricting $\phi$ to the fiber $\inv{j}(b_0)$ yields a homeomorphism
-    \[ \phi\restr{\inv{j}(b_0)}: V \cap \inv{j}(b_0) \isomto b_0 \times \R^n \]
+    \[ \phi\restr{\inv{j}(b_0)}: V \cap \inv{j}(b_0) \isomto b_0 \times \R^n. \]
     It follows that $\psi: A \cross (V \cap \inv{j}(b_0)) \isomto A \cross \R^n$ with
-    \[ \psi(a, e) = (a, \snd{\phi}(e)) \]
+    $\psi(a, e) = (a, \snd{\phi}(e))$
     is a homeomorphism as well.
 
     % neighborhoods
     The product $A \cross (V \cap \inv{j}(b_0))$ is open in $E(\ind{c_{A, b_0}}\bb)$,
     since  $V \cap \inv{j}(b_0)$ is open in $\inv{j}(b_0)$ with the subspace topology.
-    Additionally, from
+    Furthermore, from
     \[ i_{c}(a) = (a, i(c_{A, b_0}(a))) = (a, i(b_0)) \tand \snd{\phi}(i(b_0)) = 0 \]
-    it follows that $A \cross (V \cap \inv{j}(b_0))$ is a neighborhood of $\cyldown{A}$.
-    So $\psi$ maps a neighborhood of $i_c(A)$
+    it follows that $\psi(A \cross (V \cap \inv{j}(b_0)))$ is a neighborhood of $\cyldown{A}$.
+    Hence, $\psi$ maps a neighborhood of $i_c(A)$
     to a neighborhood of $\cyldown{A}$.
     
     % commutativity
-    Commutativity between the injection maps is given by
+    Commutativity with the injection maps is given by
     \[ \psi(i_c(a)) = \psi(a, i(b_0)) = (a, \snd{\phi}(i(b_0))) = (a, 0) = (id \cross 0)(a) \]
-    and between the projection maps by
-    \[ j_c(a, e) = a = \pi_1(a, x) = \pi_1(\psi(a, e)). \]
+    and with the projection maps by
+    \[ j_c(a, e) = a = \pi_1(a, \snd{\phi}(e)) = \pi_1(\psi(a, e)). \]
 
-    Hence, $\ind{c_{A, b_0}}\bb$ and $\be{A}$ are isomorphic via $\psi$. 
+    We conclude that $\ind{c_{A, b_0}}\bb$ is trivial.
 \end{myproof}
