--- a/src/sections/induced/parts/simplex.tex
+++ b/src/sections/induced/parts/simplex.tex
@@ -1,11 +1,8 @@
 % foreword
 \begin{myparagraph}
-    We can follow a statement about extending a microbundle over a simplex
+    We can derive a statement from this about extending a microbundle over a simplex
     by utilizing that the cone of the boundary of a simplex 
     is homeomorphic to the simplex itself.
-
-    This statement will be used to prove an
-    important theorem about `Whitney sums' later in this chapter.
 \end{myparagraph}
 
 % corollary
@@ -22,8 +19,8 @@
     if and only if $\ind{f}\bb = \bb[\partial\Delta]$ is trivial.
 
     We have a homeomorphism $\phi: C\partial \Delta \isomto \Delta$ with
-    \[ \phi((t_1, \dots, t_{d + 1}), \lambda) := (1 - \lambda) (t_1, \dots, t_{d + 1}) + \frac{\lambda}{d + 1} (1, \dots, 1). \]
-    In particular, $\phi(\partial \Delta \cross \{0\}) = \partial \Delta$.
+    \[ \phi((t_1, \dots, t_{d + 1}), \lambda) = (1 - \lambda) (t_1, \dots, t_{d + 1}) + \frac{\lambda}{d + 1} (1, \dots, 1). \]
+    Particulary, $\phi(\partial \Delta \cross \{0\}) = \partial \Delta$.
 
     It follows that $B' \cup_f C \partial\Delta \cong B' \cup \Delta$, which concludes the proof.
 \end{myproof}
