--- a/src/sections/microbundle/parts/paracompact.tex
+++ b/src/sections/microbundle/parts/paracompact.tex
@@ -14,7 +14,7 @@
 
 % afterword
 \begin{myparagraph}
-    So we may assume that an open subset of $E(\bb)$ is homeomorphic to the whole $B \cross \R^n$,
+    This means that there exists an open subset of $E(\bb)$ being homeomorphic to the entire $B \cross \R^n$,
     instead of only a neighborhood of $\cyldown{B}$ given by the definition of triviality.
 \end{myparagraph}
 
@@ -22,40 +22,39 @@
 \begin{myproof}
     We show both implications.
 
-    `$\impliedby$'
-
-    This is simply a weakening of the definition of triviality. 
-
     `$\implies$'
 
     By restricting $E(\bb)$ to an open neighborhood
     and applying \myintref{microbundle::total} if necessary,
     we may assume that the entire $E(\bb)$ is an open subset of $B \cross \R^n$.
 
-    Since $E(\bb)$ is a neighborhood of $\cyldown{B}$,
+    Hence,
     there exist $B_i \sub B$ open and $0 < \eps_i < 1$ with $\bigcup_{i \in I} B_i = B$ such that
     \[ \bigcup_{i \in I } B_i \cross \ball[\eps_i] \sub E(\bb). \]
     Without loss of generality,
-    we may assume that the collection $\{B_i\}$ is locally finite by using
-    a locally finite refinement if necessary, utilizing the fact that $B$ is paracompact.
+    we may assume that the collection $\{B_i\}$ is locally finite by refining this collection if necessary,
+    utilizing the fact that $B$ is paracompact.
 
     Furthermore, $B$ being paracompact hausdorff yields a partition of unity
     \[ f_i: B \to [0, 1] \twith \supp{f_i} \sub B_i\]
     such that $\sum_{i \in J}f_i = 1$.
     
-    Now, we define a map
-    \[ \lambda: B \to (0, \infty) \twith \lambda := \sum_{i \in J} \eps_i f_i, \]
-    which has the property that $\abs{x} < \lambda(b) \implies (b, x) \in E(\bb)$ since
+    We define a map $\lambda: B \to (0, \infty)$ with $\lambda = \sum_{i \in J} \eps_i f_i$,
+    which has the property that $\abs{x} < \lambda(b) \implies (b, x) \in E(\bb)$ because
     \[ \abs{x} < \lambda(b) \]
     \[ \iff  \abs{x} < \eps_{i_1} f_{i_1}(b) + \cdots + \eps_{i_n} f_{i_n}(b) \]
     \[ \iff 0 < (\eps_{i_1} - \abs{x}) f_{i_1}(b) + \cdots + (\eps_{i_n} - \abs{x}) f_{i_n}(b) \]
-    \[ \implies \exists i \in J: 0 < (\eps_{i_1} - \abs{x}) f_{i_1}(b) \]
+    \[ \implies \exists i \in J: 0 < (\eps_{i} - \abs{x}) f_{i}(b) \]
     \[ \implies (b, x) \in B_i \cross \ball[\eps_i]  \implies (b, x) \in E(\bb). \]
 
     Finally, we have a homeomorphism between the open subset
     $\set{(b, x) \in B \cross \R^n}{\abs{x} < \lambda(b)} \sub E(\bb)$ and $B \cross \R^n$ via
     \[ (b, x) \mapsto (b, \frac{x}{\lambda(b) - \abs{x}}). \]
-    Since $(b, 0)$ is mapped to $(b, 0)$,
+    Since $(b, 0)$ is mapped to $(b, 0)$, it follows that
     the homeomorphism commutes with the injection and projection maps.
     % TODO: explain commutativity
+
+    `$\impliedby$'
+
+    This is simply a weakening of the definition of triviality. 
 \end{myproof}
