--- a/src/sections/whitney/parts/trivialize.tex
+++ b/src/sections/whitney/parts/trivialize.tex
@@ -1,10 +1,13 @@
 % foreword
 \begin{myparagraph}
-    Lastly, we show the above mentioned theorem about Whitney sums
-    which will be essential in the proof of Milnors Theorem.
+    In the remainder of this section, we show the above mentioned theorem about the
+    existence of an `inverse' in respect to the Whitney sum.
+    This statement is essential for the proof of Milnors \Cref{normal::milnor}.
 
-    For its prove, we need the following proposition
-    which will be shown in \myintref{chapter::suspension}.
+    In order to show this, we require the following proposition,
+    whose proof will be deferred until \myintref{chapter::suspension}.
+
+    % ? rephrase
 \end{myparagraph}
 
 % bouquet proposition
@@ -36,9 +39,9 @@
     Let $B'$ be the $(d - 1)$-skeleton of $B$ and let $\bn'$ be its corresponding microbundle
     such that $\whitney{\bb[B']}{\bn'}$ is trivial.
 
-    \begin{enumerate}
+    \begin{steps}
         % simplex
-        \item $\whitney{\bn'}{\be{B'}}$ can be extended over any $d$-simplex $\sigma$:
+        \item $\whitney{\bn'}{\be{B'}}$ can be extended over any $d$-simplex $\sigma$
 
         Consider the equation
         \[
@@ -47,45 +50,48 @@
             = \whitney{\bn'\restr{\partial\sigma}}{\bb[\partial\sigma]}
             = (\whitney{\bn'}{\bb[B']})\restr{\partial\sigma}
         \]
-        in which we used the previous lemma and \myintref{induced::simplex}
+        in which we used \myintref{induced::simplex}
         for $\be{B'}\restr{\partial\sigma} = \bb[\partial\sigma]$.
         Since $(\whitney{\bn'}{\bb[B']})\restr{\partial\sigma}$ is trivial, the claim follows from \myintref{induced::simplex}.
 
         % extend
-        \item $\whitney{\bn'}{\be{B'}}$ can be extended over $B$:
+        \item $\whitney{\bn'}{\be{B'}}$ can be extended over $B$
 
-        The difficulty is that the individual $d$-simplices are not well-seperated.
-        Let $B''$ denote $B$ with small open $d$-cells removed from every $d$-simplex.
-        Since $B'$ is a retract of $B''$ we can extend $\whitney{\bn'}{\be{B'}}$ to a microbundle $\nu$ over $B''$.
+        One difficulty is that the individual $d$-simplices are not well-seperated.
+        To deal with this, we consider $B''$ which is defined to be $B$
+        with small open $d$-cells removed from every $d$-simplex.
+        Since $B'$ is a retract of $B''$, we can extend $\whitney{\bn'}{\be{B'}}$ to a microbundle $\nu$ over $B''$.
 
-        Now we can extend $\nu$ over $B$ by taking all extensions of $\nu$
+        Now we extend $\nu$ over $B$ by taking all extensions of $\nu$
         over every simplex
-        using (1.), and glueing its total spaces together along $E(\nu)$.
+        using (Step 1), and glueing its total spaces together along $E(\nu)$.
         Similarly, the injection and projection can be obtained
         by glueing the injection and projection maps over every simplex together.
 
         We denote the resulting microbundle by $\eta$.
 
         % trivial
-        \item
+        \item \blankbreak{}
         Consider the mapping cone $B \sqcup_\iota CB'$ over the inclusion $B' \incl B$.
-        Since
+        The following equation shows that $(\whitney{\bb}{\eta})\restr{B'}$ is trivial:
         \[
             (\whitney{\bb}{\eta})\restr{B'}
-            = \whitney{\bb[B']}{\eta\restr{B'}}
-            = \whitney{\bb[B']}{(\whitney{\bn'}{\be{B'}})}
-            = \whitney{(\whitney{\bb[B']}{\bn'})}{\be{B'}}
-            = \whitney{\be{B'}}{\be{B'}}
+            \cong \whitney{\bb[B']}{\eta\restr{B'}}
+            \cong \whitney{\bb[B']}{(\whitney{\bn'}{\be{B'}})}
+            \cong \whitney{(\whitney{\bb[B']}{\bn'})}{\be{B'}}
+            \cong \whitney{\be{B'}}{\be{B'}}
         \]
-        % ! associativity not shown
-        is trivial, it follows from \myintref{induced::cone} that
-        we can extend $\whitney{\bb}{\eta}$ over $B \sqcup_\iota CB'$,
-        which will be denoted by $\xi$.
+        \myintref{induced::cone} then yields a microbundle $\xi$ over $B \sqcup_\iota CB'$
+        extending $\whitney{\bb}{\eta}$.
 
-        The mapping cone $B \sqcup_\iota CB'$ has the homotopy type of a bouquet of spheres
-        by carrying $B'$ along $CB'$ collapsing to a single point.
-        Since any $d$-simplex is homotopic to a $d$-disc and its boundary is collapsed,
-        we obtain the homotopy of a $(d - 1)$-sphere.
+        The mapping cone $B \sqcup_\iota CB'$ has the homotopy type of a bouquet of spheres,
+        which can be seen as follows:
+        \begin{itemize}
+            \item A $d$-simplex is homotopic to a $d$-disc.
+            \item A $d$-disc whose boundary is collapsed to a single point is a $d$-sphere.
+            \item One can define a homotopy between $\iota(B')$ and the tip of the cone by
+            traveling along $CB'$.
+        \end{itemize}
         
         Using \myintref{homotopy::theorem} and \myintref{whitney::bouquet},
         we conclude that there exists a microbundle $\bn$ such that $(\whitney{\xi}{\bn})\restr{B}$ is trivial.
@@ -98,5 +104,5 @@
             = \whitney{\bb}{(\whitney{\eta}{\bn\restr{B}})}
         \]
         completes the proof.
-    \end{enumerate}
+    \end{steps}
 \end{myproof}
