--- a/thesis.tex
+++ b/thesis.tex
@@ -29,8 +29,8 @@
 \begin{myparagraph}
     This section introduces two standard constructions for microbundles,
     the `induced microbundle' and the `Whitney sum'.
-    Both constructions have their vector bundle analogue,
-    where many results carry over immediatly to microbundles.
+    Both constructions have their vector bundle analogue
+    and many results carry over immediatly to microbundles.
 \end{myparagraph}
 % Document :: Constructions :: Induced
 \subsection*{Induced Microbundles}\label{section::induced}{\blankbreak}
@@ -41,16 +41,16 @@
 % Document :: Homotopy
 \section{The Homotopy Theorem}\label{chapter::homotopy}
 \begin{myparagraph}
-    In this chapter we will prove the Homotopy Theorem,
-    which is a fundamental result for microbundles.
+    In this section we will prove the Homotopy Theorem,
+    which is a fundamental result over microbundles.
     It states the following.
 \end{myparagraph}
 \input{src/sections/homotopy/parts/statement}
 \begin{myparagraph}
     In order to prove this theorem,
-    we first introduce the concept of map-germs
-    on microbundles which allows us to classify
-    isomorphisms between microbundles.
+    we introduce the concept of map-germs
+    over microbundles which provide another way
+    to think about isomorphy besides \myintref{microbundle::isomorphy}.
 \end{myparagraph}
 \input{src/sections/germ/section}
 \input{src/sections/homotopy/section}
